tests/integration/snapshots/integration__conformance__n_object_missing_key.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
{:"b"}
stderr ---
error: expected entry or closed delimiter `}`, found `:`
 --> stdin:1:2
  |
1 | {:"b"}
  | -^
  | |
  | expected due to `{`
